Migração para Spring Boot 3.3.4